--- a/OfferSphere/MainWindow.xaml
+++ b/OfferSphere/MainWindow.xaml
@@ -7,6 +7,11 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Grid>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="37*"/>
+            <ColumnDefinition Width="163*"/>
+        </Grid.ColumnDefinitions>
+        <Button Grid.Column="1" Content="Bughfhtton" HorizontalAlignment="Left" Margin="197,151,0,0" VerticalAlignment="Top" Height="73" Width="149"/>
 
     </Grid>
 </Window>
