--- a/OfferSphere/Views/MainWindow.xaml
+++ b/OfferSphere/Views/MainWindow.xaml
@@ -14,7 +14,7 @@
 
         <Canvas Name ="view_sidebar"  Grid.Column="0" Background="LightGray">
             <StackPanel VerticalAlignment="Top" Margin="10">
-                <Button Name="btn_Customer" Content="Kunden" Margin="0,5"/>
+                <Button Name="btn_Customer" Content="Kunden" Margin="0,5" Click="btn_Customer_Click"/>
                 <Button Name ="btn_Service" Content="Dienstleistungskatalog" Margin="0,5"/>
                 <Button Name ="btn_Offer" Content="Angebote" Margin="0,5"/>
                 <Button Name ="btn_Invoice" Content="Rechnungen" Margin="0,5"/>
