--- a/OfferSphere/Resources/Colors.xaml
+++ b/OfferSphere/Resources/Colors.xaml
@@ -1,4 +1,25 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+
+    <!-- Definition of colors -->
+    <Color x:Key="PrimaryColor">#FF007ACC</Color>
+    <Color x:Key="SecondaryColor">Orange</Color>
+
+    <!-- Definition of brushes based on colors -->
+    <SolidColorBrush x:Key="PrimaryBrush" Color="{StaticResource PrimaryColor}" />
+    <SolidColorBrush x:Key="SecondaryBrush" Color="{StaticResource SecondaryColor}" />
+
+    <!-- Button Background Colors -->
+    <SolidColorBrush x:Key="ButtonPrimaryBackground" Color="#007ACC" />
+    <SolidColorBrush x:Key="ButtonHoverBackground" Color="#1C97EA" />
+    <SolidColorBrush x:Key="ButtonPressedBackground" Color="#005A9E" />
+
+    <!-- Button Text Colors -->
+    <SolidColorBrush x:Key="ButtonPrimaryForeground" Color="White" />
+    <SolidColorBrush x:Key="ButtonDisabledForeground" Color="#A6A6A6" />
+
+    <!-- Button frame -->
+    <SolidColorBrush x:Key="ButtonBorderBrush" Color="#005A9E" />
     
+
 </ResourceDictionary>
