--- a/OfferSphere/Resources/Styles.xaml
+++ b/OfferSphere/Resources/Styles.xaml
@@ -1,4 +1,14 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+
+    <!-- Style for menu buttons -->
+    <Style x:Key="MenuButtonStyle" TargetType="Button">
+        <Setter Property="Background" Value="{StaticResource ButtonPrimaryBackground}" />
+        <Setter Property="Foreground" Value="{StaticResource ButtonPrimaryForeground}" />
+        <Setter Property="BorderBrush" Value="{StaticResource ButtonBorderBrush}" />
+        <Setter Property="BorderThickness" Value="2" />
+        <Setter Property="Padding" Value="10,5" />
+        <Setter Property="Margin" Value="0,5" />
+    </Style>
     
 </ResourceDictionary>
