--- a/OfferSphere/Views/CustomersView.xaml
+++ b/OfferSphere/Views/CustomersView.xaml
@@ -7,6 +7,6 @@
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid>
-            
+        <Frame Name="CustomerFrame" NavigationUIVisibility="Hidden"/>
     </Grid>
 </UserControl>
