--- a/OfferSphere/Views/MainWindow.xaml
+++ b/OfferSphere/Views/MainWindow.xaml
@@ -8,19 +8,28 @@
         Title="MainWindow" Height="450" Width="800">
     <Grid>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="37*"/>
-            <ColumnDefinition Width="163*"/>
+            <!-- Sidebar mit fester Breite -->
+            <ColumnDefinition Width="200"/>
+            <!-- Inhaltsbereich füllt den Rest -->
+            <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
 
-        <Canvas Name ="view_sidebar"  Grid.Column="0" Background="LightGray">
-            <StackPanel VerticalAlignment="Top" Margin="10">
-                <Button Name="btn_Customer" Content="Kunden" Margin="0,5" Click="btn_Customer_Click"/>
-                <Button Name ="btn_Service" Content="Dienstleistungskatalog" Margin="0,5"/>
-                <Button Name ="btn_Offer" Content="Angebote" Margin="0,5"/>
-                <Button Name ="btn_Invoice" Content="Rechnungen" Margin="0,5"/>
+        <!-- Sidebar Bereich -->
+        <Border Grid.Column="0" Background="LightGray" Padding="10">
+            <StackPanel x:Name="SidebarMenu">
+                <Button Content="Kunden" Tag="btn_MenuCustomers" 
+                    Style="{StaticResource MenuButtonStyle}" Click="Menu_Click"/>
+                <Button Content="Katalog" Tag="btn_MenuService" 
+                    Style="{StaticResource MenuButtonStyle}" Click="Menu_Click"/>
+                <Button Content="Angebote" Tag="btn_MenuQuote" 
+                    Style="{StaticResource MenuButtonStyle}" Click="Menu_Click"/>
+                <Button Content="Rechnungen" Tag="btn_MenuInvoice" 
+                    Style="{StaticResource MenuButtonStyle}" Click="Menu_Click"/>
             </StackPanel>
-        </Canvas>
-        <Canvas Name="view_MainView" Grid.Column="1" HorizontalAlignment="Center" Height="434" VerticalAlignment="Center" Width="652"/>
-        
+        </Border>
+
+        <!-- Hauptinhalt (Frame für Seiten-Navigation) -->
+        <Frame x:Name="MainFrame" Grid.Column="1" 
+           NavigationUIVisibility="Hidden" />
     </Grid>
 </Window>
