--- a/OfferSphere/Views/ContactsView.xaml
+++ b/OfferSphere/Views/ContactsView.xaml
@@ -7,6 +7,7 @@
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid>
-            
+        <TextBlock Text="Customer Contacts View" FontSize="24" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0,20,0,0"/>
+        <Frame Name="ContactFrame" NavigationUIVisibility="Hidden"/>
     </Grid>
 </UserControl>
