--- a/OfferSphere/Views/CustomersView.xaml
+++ b/OfferSphere/Views/CustomersView.xaml
@@ -7,6 +7,7 @@
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid>
+        <TextBlock Text="Customers View" FontSize="24" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0,20,0,0"/>
         <Frame Name="CustomerFrame" NavigationUIVisibility="Hidden"/>
     </Grid>
 </UserControl>
